--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 .loader-container > div{
     width: 20px;
     height: 20px;
-    background-color: white;
+    background-color: rgb(224, 139, 28);
     margin:5px;
     border-radius: 50px;
     
